--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 * { 
-    color: rgb(0, 255, 115);
-    background-color: #f250b9;
+    color: #025A2E;
+    background-color: #FFE5EC;
     box-sizing: border-box;
     scroll-padding-top: 100px; /* Added here */
 }
