--- a/mystyle.css
+++ b/mystyle.css
@@ -10,3 +10,20 @@
 body {
     padding-top: 60px; /* Adjust to match your navbar's height */
 }
+
+table {
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+}
+
+td {
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+}
